edited survey summary

--- a/text/intro.tex
+++ b/text/intro.tex
@@ -71,7 +71,8 @@ Section~\ref{sec:supercomputer}  of this paper describes in greater detail the m
 integrating supercomputer centers and the electrical grid. Section~\ref{sec:priorwork}
 is a review of prior work on HPC center strategies that might be
 deployed for managing electricity and power. Section~\ref{sec:questionnaire} of this paper
-describes the results of the questionnaire. Section~\ref{sec:opportunities} of the paper
+describes the results of the questionnaire. Section~\ref{sec:surveysummary}
+contains a summary of the questionnaire itself. Section~\ref{sec:opportunities} 
 describes opportunities, solutions and barriers. Section~\ref{sec:conclusion} describes
 conclusions and next steps. Finally, Section~\ref{sec:additional} recognizes additional
 authors.
