LLNL Thermal Management Example
Added a paragraph describing LLNL's experiences with raising temperature in the supercomputer center.

--- a/text/questionnaire.tex
+++ b/text/questionnaire.tex
@@ -248,19 +248,26 @@ interest and impact.
 \end{figure}
 
 Temperature control and lighting management are utilized as strategies, but considered medium to low interest and impact
-for responding to requests from electricity service providers because they are used as strategies for 
-energy efficiency rather than grid response.
+for responding to requests from electricity service providers. 
 The infrastructure energy efficiency of the responding supercomputer sites is high, as reflected in their reported
 Power Usage Effectiveness (PUE) (Figure \ref{figPUE}).  Two sites reported a PUE below 1.25, the majority were between 
 1.25 and 1.5 and the highest was 1.53. Approximately half of the respondents said that they used 
 temperature control and lighting management
 as strategies, but not for grid requests.  Temperature control and lighting management are well documented and understood
 strategies for improving energy efficiency, so it is not surprising that sites with PUEs below 1.5 are using them.
+
 NOAA comments that their "lights automatically shut off 24x7 
 when there is no motion in the data center."  There is a value in lighting control for 
 energy efficiency purposes, as demonstrated by its having been fully implemented.  NOAA also comments that
 the impact of further lighting control "is so small compared to the HPC demand load that" they would "be surprised 
 if the utility is interested."  
+
+LLNL reports that they “took 3 years to raise the temperature in their center by 18 degrees F.  
+It was done in conjunction with a failure rate analysis of the systems as well as a measurement of the 
+electrical savings prior to moving to the next set point”.  LLNL is currently operating in the ASHRAE 
+recommended range, but expresses concerns with increasing temperature as a grid-integration response.  The 
+concerns include hardware failures, 
+tape storage read/write errors and compromising dew point requirements where liquid and air-cooling are co-located.
 
 Distinguishing interest from impact sheds further insight; some strategies are 
 considered high impact, but not interesting enough to consider deployment.  Facility
