Change an occurrence of "high-performance computer" to "supercomputer" to be consistent with the usage throughout the paper.

--- a/text/opportunities.tex
+++ b/text/opportunities.tex
@@ -224,22 +224,23 @@ presented in the previous Section, facilities managers view these
 approaches as the most likely candidates for creating effective
 demand-response capabilities.
 
-Finally, this Section has focused heavily on the opportunities available
-to supercomputer centers that come from developing demand-response
-capabilities.  This notion is primarily due to the fact that the
-questionnaire presented in Section~\ref{sec:questionnaire} was
-distributed to high-performance computing centers in the United
-States, not to electricity service providers.  That said, opportunities do
-exist for electricity service providers that develop demand-response
+Finally, this Section has focused heavily on the opportunities
+available to supercomputer centers that come from developing
+demand-response capabilities.  This notion is primarily due to the
+fact that the questionnaire presented in Section~\ref{sec:questionnaire}
+was distributed to supercomputer centers in the United States, not to
+electricity service providers.  That said, opportunities do exist for
+electricity service providers that develop demand-response
 capabilities.  At one level, the negotiation process itself requires
 integration in terms of the communication and messaging protocols that
-are necessary.  To that end, opportunities exist for adapting and extending
-existing standards currently used within the industry, thus creating new
-use cases and capabilities for electricity service providers.  At a higher
-level, electricity service providers will most likely need to improve their
-ability to determine in near real time the important places within the
-electrical grid where demands exceed supply.  Determining this is likely
-to be a complex optimization problem.  While this Section focuses on
-solving these problems to the end of developing a demand-response
-strategy in conjunction with supercomputer centers, these capabilities
-are likely applicable to a broad range of customers.
+are necessary.  To that end, opportunities exist for adapting and
+extending existing standards currently used within the industry, thus
+creating new use cases and capabilities for electricity service
+providers.  At a higher level, electricity service providers will most
+likely need to improve their ability to determine in near real time
+the important places within the electrical grid where demands exceed
+supply.  Determining this is likely to be a complex optimization
+problem.  While this Section focuses on solving these problems to the
+end of developing a demand-response strategy in conjunction with
+supercomputer centers, these capabilities are likely applicable to a
+broad range of customers.
