Fixed case bug.

--- a/text/questionnaire.tex
+++ b/text/questionnaire.tex
@@ -24,7 +24,7 @@ and, of those, 2 responded (Intel and National Oceanic and Atmospheric Administr
 %Patki: New Graph instead of Table 1
 \begin{figure}[htbp]
 \begin{center}
-\includegraphics[scale=0.4]{NewGraphs/Table1-Graph.pdf}
+\includegraphics[scale=0.4]{NewGraphs/Table1-graph.pdf}
 \caption{Site Load and Variability}
 \label{figGraph1}
 \end{center}
