moved survey to appendix

--- a/text/whitepaper.tex
+++ b/text/whitepaper.tex
@@ -96,13 +96,9 @@ Fname Lname, Affiliation
 %To move survey questions to after the Bibliography
 %uncomment the three lines before end{document} 
 %and comment out the next three lines.
-%\section{Survey Questions}
-%\input{questions}
-%\label{sec:questions}
-
-\section{Summary of the Survey\\ Questions}
-\input{surveysummary}
-\label{sec:surveysummary}
+%\section{Summary of the Survey\\ Questions}
+%\input{surveysummary}
+%\label{sec:surveysummary}
 
 \section{Opportunities/Solutions and\\ Barriers} 
 \input{opportunities}
@@ -123,8 +119,8 @@ Fname Lname, Affiliation
 
 %\input{tableorg}
 
-%\section{Appendix}
-%\input{questions}
-%\label{sec:questions}
+\section{Appendix: Summary of the\\ Survey Questions}
+\input{surveysummary}
+\label{sec:surveysummary}
 
 \end{document}
