unnumbered the appendix, fixed xref in intro

--- a/text/whitepaper.tex
+++ b/text/whitepaper.tex
@@ -4,6 +4,7 @@
 \usepackage[pdftex]{hyperref}
 \usepackage{graphicx}
 \usepackage{enumitem}
+\usepackage{nameref}
 %
 \def\wl{\par \vspace{\baselineskip}}
 \begin{document}
@@ -119,8 +120,8 @@ Fname Lname, Affiliation
 
 %\input{tableorg}
 
-\section{Appendix: Summary of the\\ Survey Questions}
+\section*{Appendix}
+\label{Appendix}
 \input{surveysummary}
-\label{sec:surveysummary}
 
 \end{document}
