--- a/text/intro.tex
+++ b/text/intro.tex
@@ -74,6 +74,6 @@ deployed for managing electricity and power. Section~\ref{sec:questionnaire} of 
 describes the results of the questionnaire. Section~\ref{sec:surveysummary}
 contains a summary of the questionnaire itself. Section~\ref{sec:opportunities} 
 describes opportunities, solutions and barriers. Section~\ref{sec:conclusion} describes
-conclusions and next steps. Finally, Section~\ref{sec:additional} recognizes additional
-authors.
+conclusions and next steps, and Section~\ref{sec:additional} recognizes additional
+authors. The \nameref{Appendix} contains a summary of the survey questions.
 
