removed dead; xref in intro, corrected punctuation in appendix

--- a/text/surveysummary.tex
+++ b/text/surveysummary.tex
@@ -33,7 +33,7 @@ the nature of that communication in the comments.
 \subsection*{Facility Energy}
 \begin{enumerate}  [nosep]
 \item
-What is your "total facility energy"?
+What is your ``total facility energy?''
 
 \item
 What is your total HPC load?
