--- a/text/abstract.tex
+++ b/text/abstract.tex
@@ -1,16 +1,16 @@
 Some of the largest supercomputer centers in the United States are developing 
 new relationships with their electricity service providers. 
-These relationships, similar to other commercial and industrial facilities, are 
-driven by mutual interest to save energy costs and improve electrical grid reliability.
-Supercomputer centers are concerned about price, quality, environmental 
-impact and availability.
-Electricity service providers are concerned about the supercomputer center`s impact 
-on the electrical grid reliability in terms of energy consumption, peak power and fluctuations in power.
-Supercomputer center power demand can be greater than 20MW or more---the 
-theoretical peak power requirements are greater than 45MW---and re-occurring 
+These relationships, similar to other commercial and industrial partnerships, are 
+driven by mutual interest to reduce energy costs and improve electrical grid reliability.
+Supercomputer centers are concerned about quality, environmental 
+impact and availability,
+while electricity service providers are concerned about impacts
+on electrical grid reliability, particularly in terms of energy consumption, peak power and power fluctuations.
+Supercomputer centers' power demand can be 20MW or more---the 
+theoretical peak power requirements are greater than 45MW---and recurring 
 intra-hour variability can exceed 8MW.
-Consequently, the electricity service providers for some supercomputer centers
-are asking for hourly forecasts of power demand, a day in advance.
+%Consequently, the electricity service providers for some supercomputer centers
+%are asking for hourly forecasts of power demand, a day in advance.
 This paper evaluates today`s relationships, potential partnerships and possible 
 integration between supercomputer centers and their electricity service providers.
 The paper uses feedback from a questionnaire submitted to supercomputer centers 
