--- a/text/supercomputercenters.tex
+++ b/text/supercomputercenters.tex
@@ -8,21 +8,17 @@ slight tweaks to reflect the supercomputing environment
 focus (versus the datacenter as described by LBNL`s Demand
 Response Research Center).
 
-This paper distinguishes a supercomputer center as
-having unique characteristics that distinguish it from 
-a datacenter. As opposed to datacenters, supercomputer
-centers have very high system utilization and are not likely
-to use virtualization as a strategy. Also, supercomputer
-applications are generally not easily portable between
-geographic locations for a variety of reasons: security, data 
-locality, system tuning.  Finally, supercomputing centers are 
-more energy efficient than the average datacenter.
-According to prior studies,
-the average datacenter has a power usage effectiveness (PUE)
-\textbf{(cite a paper that defines PUE here)} of between 1.91 and 2.9.
-The lower the PUE, the more effective is the power usage. A PUE of 1.0 is ideal.
-The highest PUE reported by the
-supercomputer center respondents in this study is 1.53.
+For purposes of this paper, we define supercomputer centers
+as distinct from a datacenters as having 
+significantly higher system utilization and thus little or no 
+virtualization.  Additionally, supercomputer
+applications are distinguished by their lack of geographical
+portability due to security concerns, data size and machine-specific
+optimization.  We also note  that supercomputing centers tend to be more
+energy-efficient than datacenters.  
+In our survey, no SC exceeded a power usage effectiveness (PUE) of $1.53$,
+while the average data center falls between $1.91$ and $2.9$ (with $1.0$ being
+the ideal).~\cite{FIXME}
 
 \subsection{Electricity Provider Programs\\
 and Methods}
@@ -111,7 +107,7 @@ evolve with smart-grid capabilities.
 
 \section{Supercomputing Centers and \\ HPC-Grid Integration}
 
-In recent times, the fundamental drive in supercomputing to increase peak performance by adding 
+The fundamental drive in supercomputing to increase peak performance by adding 
 increasing number of power hungry components has waned, with the shift in focus to energy 
 efficiency to mitigate large operating costs.
 In addition, supercomputer centers are concerned about quality, availability, and 
