--- a/text/whitepaper.tex
+++ b/text/whitepaper.tex
@@ -77,7 +77,7 @@ Fname Lname, Affiliation
 \keywords{Electricity Service Provider, demand response}
 
 %
-\section{Introduction and Background}
+\section{Introduction}
 \input{intro}
 \label{sec:intro}
 
