split supercomputers file, xrefs

--- a/text/intro.tex
+++ b/text/intro.tex
@@ -52,13 +52,13 @@ infrastructure to manage their electricity requirements in a tightly coupled man
 with their ESPs, facilitating both energy efficiency and grid reliability.
 
 The paper is organized as follows.
-Section~\ref{sec:supercomputer}  describes the model for
-integrating supercomputer centers and the electrical grid. Section~\ref{sec:priorwork}
-reviews prior work on HPC center strategies. Section~\ref{sec:questionnaire} 
+Sections~\ref{sec:ESPintegration} and~\ref{sec:supercomputercenters} of this paper
+describe in greater detail the model for 
+integrating supercomputer centers and the electrical grid.
+Section~\ref{sec:priorwork}
+reviews prior work on HPC center strategies. Section~\ref{sec:questionnaire}
 provides the results of the questionnaire. 
 Section~\ref{sec:opportunities} 
-discusses the several opportunities, solutions and barriers that have been highlighted 
-by the survey results. We offer our conclusions in Section~\ref{sec:conclusion} along 
-with our plan for future work.  Additional authors are listed in Section~\ref{sec:additional} and
+discusses the several opportunities, solutions and barriers that have been highlighted
+by the survey results. We offer our conclusions in Section~\ref{sec:conclusion} along with our plan for future work.  Additional authors are listed in Section~\ref{sec:additional} and
 section \nameref{Appendix} summarizes the survey questions.
-
