--- a/text/whitepaper.tex
+++ b/text/whitepaper.tex
@@ -78,28 +78,21 @@ Fname Lname, Affiliation
 
 %
 \section{Introduction}
-\input{intro}
 \label{sec:intro}
+\input{intro}
 
 \section{Electricity Service Providers\\
  and HPC-Grid Integration}
-\input{supercomputercenters}
-\label{sec:supercomputer}
+\label{sec:ESPintegration}
+\input{ESPintegration}
 
-\subsection{Prior Work}
-\input{priorwork}
-\label{sec:priorwork}
+\section{Supercomputing Centers and \\ HPC-Grid Integration}
+\label{sec:supercomputercenters}
+\input{supercomputercenters}
 
 \section{Questionnaire} 
-\input{questionnaire}
 \label{sec:questionnaire}
-
-%To move survey questions to after the Bibliography
-%uncomment the three lines before end{document} 
-%and comment out the next three lines.
-%\section{Summary of the Survey\\ Questions}
-%\input{surveysummary}
-%\label{sec:surveysummary}
+\input{questionnaire}
 
 \section{Opportunities/Solutions and\\ Barriers} 
 \input{opportunities}
