sec to sub in intro

--- a/text/intro.tex
+++ b/text/intro.tex
@@ -55,7 +55,7 @@ The paper is organized as follows.
 Sections~\ref{sec:ESPintegration} and~\ref{sec:supercomputercenters} of this paper
 describe in greater detail the model for 
 integrating supercomputer centers and the electrical grid.
-Section~\ref{sec:priorwork}
+Section~\ref{sub:priorwork}
 reviews prior work on HPC center strategies. Section~\ref{sec:questionnaire}
 provides the results of the questionnaire. 
 Section~\ref{sec:opportunities} 
