removed word section in intro when referring to appendix

--- a/text/intro.tex
+++ b/text/intro.tex
@@ -61,4 +61,4 @@ provides the results of the questionnaire.
 Section~\ref{sec:opportunities} 
 discusses the several opportunities, solutions and barriers that have been highlighted
 by the survey results. We offer our conclusions in Section~\ref{sec:conclusion} along with our plan for future work.  Additional authors are listed in Section~\ref{sec:additional} and
-section \nameref{Appendix} summarizes the survey questions.
+the \nameref{Appendix} summarizes the survey questions.
